--- a/front/src/index.css
+++ b/front/src/index.css
@@ -232,3 +232,14 @@ All colors MUST be HSL.
     @apply bg-background text-foreground;
   }
 }
+
+.ProseMirror ul {
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.ProseMirror li {
+  margin-bottom: 0.25rem;
+}
